--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 git init
 git add .
 git commit -m "Initial commit"
-git remote add origin https://github.com/<seu-usuario>/envato-verification-api.git
+git remote add origin https://github.com/Adninjas/envato-verification-api.git
 git push -u origin main
